force-app/main/default/objects/Hiring_Manager__c/Hiring_Manager__c.object-meta.xml
<CustomObject>
    <label>Hiring Manager</label>
    <nameField>
        <label>Hiring manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hiring Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>