force-app/main/default/objects/Hiring_Manager__c/fields/no_of_positions__c.field-meta.xml
<CustomField>
    <fullName>no_of_positions__c</fullName>
    <label>no of positions</label>
    <summaryForeignKey>position__c.Hiring_Manager__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>