force-app/main/default/objects/Hiring_Manager__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <displayFormat>H-{0000}</displayFormat>
    <label>Reference ID</label>
    <type>AutoNumber</type>
</CustomField>