force-app/main/default/objects/Hiring_Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_number__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>